fixed overlapping titles in mobile menu (ticket 59)

--- a/wp-content/themes/wpex-pytheas/assets/css/custom-styles.css
+++ b/wp-content/themes/wpex-pytheas/assets/css/custom-styles.css
@@ -203,7 +203,7 @@ body{
 
 
 /*  MENU RESPONSIVE */
-@media only screen and (max-width: 959px){
+@media only screen and (min-width: 448px) and (max-width: 959px){
     .nav-menu > li > a,.nav-menu ul li > a:hover{
         background-color: #2C3A66;
     }
@@ -213,6 +213,15 @@ body{
         line-height: 24px;
     }
 
+}
+@media only screen and (min-width: 320px) and (max-width: 447px) {
+    .nav-menu > li > a,.nav-menu ul li > a:hover{
+        background-color: #2C3A66;
+    }
+    .nav-menu.toggled-on li ul li a {
+        height: 46px;
+        line-height: 24px;
+    }
 }
 
 @media only screen and (min-width: 1102px){
